@@ -1,3 +1,7 @@
+2006-02-16 Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-filter.c: Fix segv when encountering feMergeNode (bug 330928)
+	
 2006-02-15 Rob Staudinger <robert.staudinger@gmail.com>
 
 	* rsvg-text.c: revert fix #168223, it causes side-effects.
